<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stat Magic</string>
    <string name="def_label">DEF</string>
    <string name="hello_world">Hello World!</string>
    <string name="hp_label">HP</string>
    <string name="level_label">1</string>
    <string name="name">User.getName();</string>
    <string name="pow_label">POW</string>
    <string name="sp_label">SP</string>
    <string name="speed_label">SPEED</string>
    <string name="done_label">Done</string>
    <string name="type_label">What do you want to be?</string>
    <string name="age_label">How old are you?</string>
    <string name="setup_label">Setup</string>
    <string name="name_intro">What is your name?</string>
    <string name="map_menu">Show Map</string>
    <string name="inventory_menu">Open Inventory</string>
    <string name="inventory_label">Inventory</string>
    <string name="inventoryText1">Coffee</string>
    <string name="use_label">Use</string>
    <string name="crash_label">Crash App</string>
    <string name="battle_label">Battle</string>
    <string name="money">Money</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="red">#FF0000</color>

    <string-array name="gender_list">
        <item>Select Your Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="rank_list">
        <item>Select What You Are</item>
        <item>I Do Not Care</item>
        <item>Dork</item>
        <item>Geek</item>
        <item>Nerd</item>
        <item>Jock</item>
        <item>Blonde</item>
        <item>Teacher</item>
        <item>Hippie</item>
        <item>Animal Lover</item>
        <item>Shortie</item>
        <item>Stretch</item>
        <item>Hobbit</item>
        <item>Dwarf</item>
        <item>Vampire</item>
        <item>Ninja</item>
        <item>Gangster</item>
        <item>Emo</item>
        <item>Professor</item>
        <item>Coder</item>
        <item>Fox</item>
        <item>Werewolf</item>
        <item>Zombie</item>
        <item>Narwhal</item>
        <item>Alien</item>
        <item>Swag Master</item>
        <item>Princess</item>
        <item>Crafter</item>
        <item>Gamer</item>
        <item>Vlogger</item>
        <item>Predator</item>
        <item>Wrestler</item>
        <item>Super Hero</item>
        <item>Rich Person</item>
        <item>Baby</item>
        <item>Grandparent</item>
        <item>Biker</item>
    </string-array>

    <string name="inventoryText2">Hamburger</string>
    <string name="about_menu">About</string>
    <string name="settings_label">Settings</string>
    <string name="name_hint">What is your name?</string>
    <string name="age_hint">Age</string>
    <string name="hometown_hint">Town/City &#40;Carlsbad, CA&#41;</string>
    <string name="erase_label">Erase All Data</string>
    <string name="nerd_description">This is your opponent. He is a nerd. Nerds rule! Nerds tend to be higher in defense and lower in power.</string>
    <string name="slash">&#160;/&#160;</string>
    <string name="hpMaxValue">HP Max</string>
    <string name="spMaxValue">SP Max Value</string>
    <string name="exp_label">EXP&#160;</string>
    <string name="exp_value">EXP</string>
    <string name="exp_max">EXP</string>
    <string name="level">Level&#160;</string>
    <string name="attack_label">Attack</string>
    <string name="use_sp_label">Use SP</string>
    <string name="defend_label">Defend</string>
    <string name="flee_label">Flee</string>
    <string name="weapon_label">Weapon:&#160;</string>
    <string name="line1">NOT RENDERED</string>
    <string name="line2">NOT RENDERED</string>
    <string name="line3">NOT RENDERED</string>
    <string name="win">YOU WON!</string>
    <string name="lose">YOU LOST!</string>
    <string name="blank"></string>
    <string name="title_activity_action">ActionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="food_store">Food Store</string>
    <string name="tele">Teleport</string>
    <string name="title_activity_battle__stage">Battle_Stage</string>

</resources>
