<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:StatMagic="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/attack"
        android:icon="@drawable/battle"
        android:title="@string/attack_label"/>
    <item
        android:id="@+id/special"
        android:icon="@drawable/crash"
        android:title="@string/sp_label"/>
    <item
        android:id="@+id/inventorybattle"
        android:icon="@drawable/hamburger"
        android:title="@string/inventory_label"/>
    <item
        android:id="@+id/defend"
        android:icon="@drawable/defsprite"
        android:title="@string/defend_label"/>
    <item
        android:id="@+id/flee"
        android:icon="@drawable/flee"
        android:title="@string/flee_label"/>

</menu>