<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/firstline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line1"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/secondline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line2"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/thirdline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line3"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/battleSprite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/nerd_description"
        android:src="@drawable/nerd_sprite" />

</LinearLayout>